[package]
name = "nonchalance"
version = "0.1.0"
authors = ["Kirill Pimenov <kirill@pimenov.cc>"]

[dependencies]
ttf-noto-sans = "*"
ws = "*"
url = "*"

ring = "*"
ring-pwhash = "*"
rand = "*"

base64 = "*"
simple-signal = "*"
lazy_static = "*"
app_dirs = "*"

serde = "1.0.9"
serde_derive = "1.0.9"
bincode = "0.8.0"

[dependencies.conrod]
version = "0.53.0"
features = ["glium", "winit"]

[profile.release]
lto = true
# panic = 'abort'